# canvas_syncer

./: .gitignore  Cargo.toml  README
.github/workflows/: build.yml  quality.yml  release.yml  rust.yml  rustTest.yml
locales/: app.yml
src/: account.rs  assignment.rs  config.json.example  config.rs  course.rs  course_file.rs  download.rs  filter.rs  folder.rs  item.rs  main.rs  module.rs  page.rs  structs.rs  util.rs
