[package]
name = "canvas_syncer"
version = "0.4.4"
edition = "2021"
description = "A syncer to Canvas LMS with files among courses"
license = "MIT"
repository = "https://github.com/wznmickey/canvas_syncer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json","blocking","stream"] }
futures = "0.3"
serde_json = "1.0.115"
lazy_static = "1.4.0"
serde = {version = "1.0.150", features = ["derive"]}
file = "1.1.2"
chrono = {version = "0.4.38"}
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
indicatif = "0.17.8"
tokio = "1.37.0"
rayon = "1.10.0"
rust-i18n = "3.1.2"
use = "0.0.1-pre.0"
sys-locale = "0.3.2"
openssl = { version = "0.10.68", features = ["vendored"] }